Add header with login form and logo

--- a/css/style.css
+++ b/css/style.css
@@ -6667,11 +6667,8 @@ button.close {
   }
 }
 /*# sourceMappingURL=bootstrap.css.map */
-body {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
 .navbar {
+  margin-top: 30px;
   margin-bottom: 20px;
   background: #0383c0 url(../img/navbar.png) repeat-x;
   border: 1px #ccc solid;
@@ -6683,4 +6680,26 @@ body {
   background: none;
   color: #0383c0 !important;
   font-weight: bold;
+}
+.logo {
+  width: 100%;
+  margin: 40px 0 0 0;
+  font-family: "Oswald", sans-serif;
+}
+.primary {
+  color: #0383c0;
+}
+.subtext {
+  color: #666;
+  font-size: 16px;
+  font-weight: bold;
+  margin: 10px 0 0 45px;
+}
+header form {
+  float: right;
+  margin-top: 30px;
+  background: #0383c0;
+  padding: 15px;
+  color: #fff;
+  border-radius: 5px;
 }
