Make tab showcase responsive with media queries

--- a/css/style.css
+++ b/css/style.css
@@ -6726,7 +6726,7 @@ header form {
   background: #ccc;
   list-style: none;
   color: #666;
-  padding: 0px 10px;
+  padding: 15px 10px;
   padding-left: 20px;
   margin-bottom: 5px;
   width: 100%;
@@ -6743,7 +6743,6 @@ header form {
   display: block;
   /* so that pointing anywhere in the padding counts as pointing on the link */
 
-  line-height: 50px;
   color: #666;
   text-decoration: none;
 }
@@ -6753,7 +6752,7 @@ header form {
   background: #0383c0;
   color: #fff;
   overflow: hidden;
-  height: 270px;
+  height: 275px;
   padding-top: 20px;
 }
 .slide-img {
@@ -6765,6 +6764,11 @@ header form {
   width: 40%;
   margin-left: 40px;
 }
+@media (max-width: 960px) {
+  header form {
+    width: 100% !important;
+  }
+}
 @media (max-width: 768px) {
   .slide-img {
     display: none;
@@ -6772,5 +6776,19 @@ header form {
   .tab-text {
     float: none;
     width: 80%;
+  }
+  .navbar a {
+    color: #fff !important;
+  }
+  .navbar a:hover {
+    color: #ccc !important;
+  }
+  .navbar-form {
+    display: none;
+  }
+}
+@media (max-width: 600px) {
+  .tab-content {
+    height: 320px;
   }
 }
