--- a/less/style.less
+++ b/less/style.less
@@ -2,6 +2,10 @@
 
 @primary: #0383c0;
 
+a {
+    color: @primary;
+}
+
 body {
 }
 
@@ -101,6 +105,18 @@ header form {
     margin-left: 40px;
 }
 
+.main-image {
+    width: 100%;
+}
+
+footer {
+    text-align: center;
+    height: 60px;
+    background: #f4f4f4;
+    padding-top: 20px;
+    margin-top: 50px;     
+}
+
 @media(max-width: 960px) {
     header form {
         width: 100% !important;
@@ -132,6 +148,3 @@ header form {
     }
 }
 
-.main-image {
-    width: 100%;
-}
